cabal-version: 1.24
name:               hs-perl5
version:            0.1.0
copyright:          2008-2015 Audrey Tang
license:            BSD3
license-file:       LICENSE
homepage:           https://github.com/phlummox/hs-perl5#readme
bug-reports:        https://github.com/phlummox/hs-perl5/issues
author:             Audrey Tang <audreyt@audreyt.org>
maintainer:         phlummox <phlummox2@gmail.com>
synopsis:           Haskell interface to embedded Perl 5 interpreter
description:        This module provides a Haskell interface to embedded Perl 5
                    interpreter.
                    .
                    Documentation and functionality is scarce at the moment; see
                    @examples/test.hs@ for some basic usage examples.
                    .
                    Currently supported features are:
                    .
                    * Function calls
                    * Method calls
                    * Module imports
                    * Callbacks
                    .
                    /IN DEVELOPMENT & EXPERIMENTAL/
stability:          experimental
build-type:         Custom
category:           Language, Perl

extra-source-files:
    README.md
    CHANGELOG.md
    cbits/p5embed.h
    cbits/perlxsi.h

source-repository head
  type: git
  location: https://github.com/phlummox/hs-perl5

custom-setup
  setup-depends:
      Cabal
    , base
    , process

library
  exposed-modules:
      Language.Perl5
  hs-source-dirs:      src
  include-dirs:        cbits
  c-sources:           cbits/p5embed.c
  includes:            p5embed.h
  build-depends:
      base >=4.7 && <5
  default-language:    Haskell2010

-- test-suite hs-perl5-test
--   type: exitcode-stdio-1.0
--   main-is: Spec.hs
--   other-modules:
--       Paths_hs_perl5
--   hs-source-dirs:
--       test
--   ghc-options: -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--       base >=4.7 && <5
--     , hs-perl5
--   default-language: Haskell2010

executable example
  buildable: False
  main-is: test.hs
  hs-source-dirs:
      examples
  build-depends:
      base
    , hs-perl5
  ghc-options:         -Wall -fwarn-tabs -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


