cabal-version: 1.24
name:               hs-perl5
version:            0.1.0
copyright:          2008-2015 Audrey Tang, 2021- Phlummox
license:            MIT
license-file:       LICENSE
homepage:           https://github.com/phlummox/hs-perl5#readme
bug-reports:        https://github.com/phlummox/hs-perl5/issues
author:             Audrey Tang <audreyt@audreyt.org>, phlummox <phlummox2@gmail.com>
maintainer:         phlummox <phlummox2@gmail.com>
synopsis:           Haskell interface to embedded Perl 5 interpreter
description:        This module provides a Haskell interface to embedded Perl 5
                    interpreter.
                    .
                    Documentation and functionality is scarce at the moment; see
                    @examples/test.hs@ for some basic usage examples.
                    .
                    Currently supported features are:
                    .
                    * Function calls
                    * Method calls
                    * Module imports
                    * Callbacks
                    .
                    /IN DEVELOPMENT & EXPERIMENTAL/
                    .
                    /PORTABILITY: probably only Linux/
                    .
                    If using Stack -- seems to work OK on stack lts-9 thru stack lts-15
stability:          experimental
tested-with:        GHC == 8.0.2, GHC == 8.2.2, GHC == 8.8.3
build-type:         Custom
category:           Language, Perl

extra-source-files:
    README.md
    CHANGELOG.md
    cbits/p5embed.h
    cbits/perlxsi.h

source-repository head
  type: git
  location: https://github.com/phlummox/hs-perl5

custom-setup
  setup-depends:
      Cabal
    , base
    , process

library
  exposed-modules:
      Language.Perl5
      Language.Perl5.Types
      Language.Perl5.Internal
      Language.Perl5.Internal.Types
      Language.Perl5.Internal.Constants
  hs-source-dirs:      src
  include-dirs:        cbits
  c-sources:           cbits/p5embed.c
  build-depends:
                       base >=4.7 && <5
                     , bytestring
                     , text
  default-language:    Haskell2010

  ghc-options: -Wall -fwarn-tabs
  if impl(ghc >= 8.0)
    ghc-options: -Wredundant-constraints -Wno-type-defaults -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wno-name-shadowing -Wextra
  if impl(ghc >= 8.2)
    ghc-options: -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options: -Wmissing-deriving-strategies


test-suite hs-perl5-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Language.Perl5.TestUtils
  build-depends:       base
                     , base-compat >= 0.10
                     , hs-perl5
                     , hspec
                     , QuickCheck >= 2.10
                     , quickcheck-text
                     , text
                     , interpolatedstring-perl6
                     , temporary
  ghc-options:
    -- ideally, should compile & run tests
    -- both with and without threading.
                       -rtsopts
                       -threaded
                       -with-rtsopts=-N
                       -Wall -fwarn-tabs
  default-language:    Haskell2010

  if impl(ghc >= 8.0)
    ghc-options: -Wredundant-constraints -Wno-type-defaults -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wno-name-shadowing -Wextra
  if impl(ghc >= 8.2)
    ghc-options: -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options: -Wmissing-deriving-strategies

executable example
  buildable: False
  main-is: test.hs
  hs-source-dirs:
      examples
  build-depends:
      base
    , hs-perl5
  ghc-options:         -Wall -fwarn-tabs -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


